--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,9 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
-
 spring.jpa.hibernate.ddl-auto=update
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger.html
+##localhost:8080/todolist/api/v1/swagger.html
+
